--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "generate": "stencil generate"
   },
   "dependencies": {
+    "@ionic/core": "^5.6.11",
     "@stencil/core": "^2.0.1",
     "@stripe/stripe-js": "^1.16.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@stencil/sass": "^1.4.1"
+  }
 }
