--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stripe-elements",
+  "name": "@stripe-elements/stripe-elements",
   "version": "0.0.1",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
@@ -36,6 +36,11 @@
   "devDependencies": {
     "@stencil/sass": "^1.4.1",
     "@types/jest": "^26.0.24",
-    "prettier": "^2.3.2"
+    "@types/puppeteer": "^5.4.3",
+    "jest": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "np": "^7.5.0",
+    "prettier": "^2.3.2",
+    "puppeteer": "^5.5.0"
   }
 }
