--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
+    "lint": "eslint src/**/*{.ts,.tsx}",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
@@ -34,13 +35,19 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@stencil/eslint-plugin": "^0.3.1",
     "@stencil/sass": "^1.4.1",
     "@types/jest": "^26.0.24",
     "@types/puppeteer": "^5.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.24.0",
     "jest": "^26.6.3",
     "jest-cli": "^26.6.3",
     "np": "^7.5.0",
     "prettier": "^2.3.2",
-    "puppeteer": "^5.5.0"
+    "puppeteer": "^5.5.0",
+    "typescript": "^4.3.5"
   }
 }
