feat: zip code field

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fmt": "prettier-eslint --write $PWD/'src/{components, utils}/**/*{.ts,.tsx,.js}'",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
+    "g": "stencil generate",
     "generate": "stencil generate",
     "format": "prettier --write src",
     "example:copy": "stencil build --docs && cp -R dist/stripe-elements example/",
