chore: ignore e2e test

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "start": "stencil build --dev --watch --serve",
     "lint": "eslint src/**/*{.ts,.tsx}",
     "fmt": "prettier-eslint --write $PWD/'src/{components, utils}/**/*{.ts,.tsx,.js}'",
-    "test": "stencil test --spec --e2e",
+    "test": "stencil test --spec",
+    "test:e2e": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
     "format": "prettier --write src",
