--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stripe-elements/stripe-elements",
-  "version": "0.1.0",
+  "version": "1.0.0-canary",
   "description": "Web component of Stripe elements",
   "main": "dist/index.cjs.js",
   "module": "dist/custom-elements/index.js",
