--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stripe-elements/stripe-elements",
+  "name": "stripe-pwa-elements",
   "version": "2.0.2",
   "description": "Web component of Stripe elements",
   "main": "dist/index.cjs.js",
