--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.0.2",
   "description": "Web component of Stripe elements",
   "main": "dist/index.cjs.js",
-  "module": "dist/custom-elements/index.js",
+  "module": "dist/index.js",
   "es2015": "dist/esm/index.mjs",
   "es2017": "dist/esm/index.mjs",
-  "types": "dist/custom-elements/index.d.ts",
+  "types": "dist/types/components.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/stripe-elements/stripe-elements.esm.js",
@@ -61,14 +61,14 @@
   "devDependencies": {
     "@stencil/eslint-plugin": "^0.4.0",
     "@stencil/sass": "^3.0.3",
-    "@types/jest": "^29.5.1",
+    "@types/jest": "^27.0.3",
     "@types/puppeteer": "^5.4.7",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.41.0",
     "eslint-plugin-react": "^7.32.2",
-    "jest": "^29.5.0",
-    "jest-cli": "^29.5.0",
+    "jest": "^27.0.3",
+    "jest-cli": "^27.4.5",
     "np": "^8.0.2",
     "prettier": "^2.8.8",
     "prettier-eslint": "^15.0.1",
