--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "devDependencies": {
     "@stencil-community/eslint-plugin": "^0.5.0",
     "@stencil/sass": "^3.0.3",
+    "@stencil/store": "^2.0.7",
     "@types/jest": "^27.0.3",
     "@types/puppeteer": "^5.4.7",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
