fix: rename eslint rule from @stencil -> @stencil-community

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,10 +17,10 @@
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-empty-function": "off",
     "no-prototype-builtins": "off",
-    "@stencil/async-methods": "error",
-    "@stencil/ban-prefix": ["error", ["stencil", "stnl"]],
-    "@stencil/decorators-context": "error",
-    "@stencil/decorators-style": [
+    "@stencil-community/async-methods": "error",
+    "@stencil-community/ban-prefix": ["error", ["stencil", "stnl"]],
+    "@stencil-community/decorators-context": "error",
+    "@stencil-community/decorators-style": [
       "warn", {
         "prop": "inline",
         "state": "inline",
@@ -30,20 +30,20 @@
         "watch": "multiline",
         "listen": "multiline"
       }],
-    "@stencil/element-type": "error",
-    "@stencil/host-data-deprecated": "error",
-    "@stencil/methods-must-be-public": "error",
-    "@stencil/no-unused-watch": "error",
-    "@stencil/own-methods-must-be-private": "error",
-    "@stencil/own-props-must-be-private": "error",
-    "@stencil/prefer-vdom-listener": "error",
-    "@stencil/props-must-be-public": "error",
-    "@stencil/props-must-be-readonly": "off",
-    "@stencil/render-returns-host": "error",
-    "@stencil/required-jsdoc": "error",
-    "@stencil/reserved-member-names": "error",
-    "@stencil/single-export": "error",
-    "@stencil/strict-mutable": "warn",
+    "@stencil-community/element-type": "error",
+    "@stencil-community/host-data-deprecated": "error",
+    "@stencil-community/methods-must-be-public": "error",
+    "@stencil-community/no-unused-watch": "error",
+    "@stencil-community/own-methods-must-be-private": "error",
+    "@stencil-community/own-props-must-be-private": "error",
+    "@stencil-community/prefer-vdom-listener": "error",
+    "@stencil-community/props-must-be-public": "error",
+    "@stencil-community/props-must-be-readonly": "off",
+    "@stencil-community/render-returns-host": "error",
+    "@stencil-community/required-jsdoc": "error",
+    "@stencil-community/reserved-member-names": "error",
+    "@stencil-community/single-export": "error",
+    "@stencil-community/strict-mutable": "warn",
     "padding-line-between-statements": [
       "error",
       { "blankLine": "always", "prev": ["const", "let", "var", "block", "block-like"], "next": "*" },
