--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stripe-pwa-elements",
-  "version": "2.1.0",
+  "version": "3.0.0-0",
   "description": "Web component of Stripe elements",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
